--- a/HTML/Prova.html
+++ b/HTML/Prova.html
@@ -17,7 +17,8 @@
 		</div>
 	<button class="reset" id="reset" onclick="Reset()">Resetar</button>
 	</div>
-
+		
+	<img src="../IMAGEM/sair.png" onclick="Sair()" class="imgsair">
 		<div id="tudo">
 			<h2 class="wc" id="wc">Seja Bem Vindo!!!</h2><h2 id="nomepessoa" class="userrr"></h2><br><br>
 <div class="container" id="container1">
